--- a/DevReports/App.config
+++ b/DevReports/App.config
@@ -7,14 +7,44 @@
   </configSections>
 	
   <applicationSettings>
-    <DevExpress.LookAndFeel.Design.AppSettings>
-      <setting name="DPIAwarenessMode" serializeAs="String">
-        <value>System</value>
-      </setting>
-      <setting name="RegisterBonusSkins" serializeAs="String">
-        <value>True</value>
-      </setting>
-    </DevExpress.LookAndFeel.Design.AppSettings>
+	  <DevExpress.LookAndFeel.Design.AppSettings>
+		  <setting name="DefaultAppSkin" serializeAs="String">
+			  <value>Skin/Office 2019 Colorful</value>
+		  </setting>
+		  <setting name="DefaultPalette" serializeAs="String">
+			  <value>Plum</value>
+		  </setting>
+		  <setting name="TouchUI" serializeAs="String">
+			  <value></value>
+		  </setting>
+		  <setting name="CompactUI" serializeAs="String">
+			  <value></value>
+		  </setting>
+		  <setting name="TouchScaleFactor" serializeAs="String">
+			  <value></value>
+		  </setting>
+		  <setting name="DirectX" serializeAs="String">
+			  <value>True</value>
+		  </setting>
+		  <setting name="RegisterUserSkins" serializeAs="String">
+			  <value></value>
+		  </setting>
+		  <setting name="RegisterBonusSkins" serializeAs="String">
+			  <value></value>
+		  </setting>
+		  <setting name="FontBehavior" serializeAs="String">
+			  <value></value>
+		  </setting>
+		  <setting name="DefaultAppFont" serializeAs="String">
+			  <value>Segoe UI;9</value>
+		  </setting>
+		  <setting name="DPIAwarenessMode" serializeAs="String">
+			  <value></value>
+		  </setting>
+		  <setting name="CustomPaletteCollection" serializeAs="Xml">
+			  <value />
+		  </setting>
+	  </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
